@@ -1,3 +1,8 @@
+2018-04-01  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* server/GdbServerImpl.cpp (GdbServerImpl::rspReadReg): Return an
+	error when accessing an invalid register.
+
 2018-03-22  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::doOneStep): Detect
